[Refactoring] petriobj package Readme update